# homebrew-releaser

./: .coveragerc  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  action.yml  docker-compose.yml  justfile  pyproject.toml  setup.py
.github/workflows/: build.yml  release.yml  update-stable.yml
homebrew_releaser/: app.py  checksum.py  constants.py  formula.py  git.py  homebrew.py  homebrew_readme_updater.py  readme_updater.py  releaser.py  utils.py
shell_releaser/: releaser.py
test/: mock_download_strategy.rb
test/cassettes/: test_formula_template.rb  test_formula_template_no_article_description.rb  test_formula_template_no_depends_on.rb  test_formula_template_no_test.rb
test/formula_imports/: mock_download_strategy.rb
test/formulas/: homebrew_releaser.rb  test_formula_template.rb  test_formula_template_complete_matrix.rb  test_formula_template_darwin_matrix.rb  test_formula_template_empty_fields.rb  test_formula_template_false_string_bools.rb  test_formula_template_linux_matrix.rb  test_formula_template_matrix.rb  test_formula_template_no_article_description.rb  test_formula_template_no_depends_on.rb  test_formula_template_no_test.rb  test_generate_formula.rb  test_generate_formula_complete_matrix.rb  test_generate_formula_custom_tarball.rb  test_generate_formula_darwin_matrix.rb  test_generate_formula_download_strategy.rb  test_generate_formula_empty_fields.rb  test_generate_formula_formula_includes.rb  test_generate_formula_formula_name_starts_description.rb  test_generate_formula_linux_matrix.rb  test_generate_formula_multiline_fields.rb  test_generate_formula_multiline_test.rb  test_generate_formula_no_article_description.rb  test_generate_formula_no_depends_on.rb  test_generate_formula_no_test.rb  test_generate_formula_override_version.rb  test_generate_formula_string_false_configs.rb  test_one_of_each_matrix.rb
test/unit/: conftest.py  test_app.py  test_checksum.py  test_formula.py  test_formula_template.rb.txt  test_git.py  test_github_action_config.py  test_homebrew.py  test_readme_updater.py  test_releaser.py  test_utils.py
