[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "homebrew-releaser"
description = "Release scripts, binaries, and executables directly to Homebrew via GitHub Actions."
dynamic = ["version"]
readme = "README.md"
requires-python = "==3.14.*"
license = { text = "MIT" }
authors = [{ name = "Justintime50" }]
urls = { Homepage = "http://github.com/Justintime50/homebrew-releaser" }
scripts = { homebrew-releaser = "homebrew_releaser.releaser:main" }
dependencies = [
    "chevron == 0.14.*",
    "pretty-tables == 4.*",
    "requests == 2.*",
    "woodchips == 2.*",
]
optional-dependencies = { dev = [
    "bandit == 1.9.*",
    "ruff == 0.14.*",
    "mypy == 1.19.*",
    "pytest == 9.*",
    "pytest-cov == 7.*",
] }

[tool.setuptools.dynamic]
version = { attr = "homebrew_releaser._version.__version__" }

[tool.setuptools.packages.find]
exclude = ["examples", "test"]

[tool.setuptools.package-data]
homebrew_releaser = ["py.typed"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-ignore = ["E203"]

[tool.mypy]
disable_error_code = "import-untyped"
